# trend-lab-skillforge-260709

./: README.md  pyproject.toml
src/skillforge/: main.py
tests/: test_smoke.py
